--- a/.github/workflows/testing_changes.yml
+++ b/.github/workflows/testing_changes.yml
@@ -13,7 +13,6 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install FirebirdSQL clients
-        if: matrix.os == 'linux'
         run: |
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends firebird3.0-utils libfbclient2
@@ -22,17 +21,15 @@ jobs:
         uses: juarezr/firebirdsql-github-action@v1.0.0
         with:
           version: 'latest'
-          firebirdsql_database: 'my_database.fdb'
-          firebirdsql_username: 'my_user'
-          firebirdsql_password: 'my_password'
+          firebird_database: 'my_database.fdb'
+          firebird_username: 'my_user'
+          firebird_password: 'my_password'
 
       - name: Testing Connection and Query
-        if: matrix.os == 'linux'
         run: |
           echo 'select * from rdb$database;' | isql-fb -u MY_USER -p my_password 'localhost:my_database.fdb' && echo 'SUCCESS' || echo "FAILURE"
 
       - name: Stop Container
-        if: matrix.os == 'linux'
         run: |
           docker rm --volumes --force firebirdsql
 
