use 'localhost:my_database.fdb' for database connnection

--- a/.github/workflows/testing_changes.yml
+++ b/.github/workflows/testing_changes.yml
@@ -22,12 +22,12 @@ jobs:
         with:
           version: 'latest'
           firebird_database: 'my_database.fdb'
-          firebird_username: 'my_user'
+          firebird_user: 'my_user'
           firebird_password: 'my_password'
 
       - name: Testing Connection and Query
         run: |
-          echo 'select * from rdb$database;' | isql-fb -u MY_USER -p my_password 'localhost:my_database.fdb' && echo 'SUCCESS' || echo "FAILURE"
+          echo 'select * from rdb$database;' | isql-fb -u my_user -p my_password 'localhost:my_database.fdb' && echo 'SUCCESS' || echo "FAILURE"
 
       - name: Stop Container
         run: |
