--- a/.github/workflows/testing_changes.yml
+++ b/.github/workflows/testing_changes.yml
@@ -1,33 +1,53 @@
 # for simplicity we are checking compilation and testing everything on the Ubuntu environment only.
 
-on: [push, pull_request]
-
 name: testing_changes
+
+on: 
+    push:
+    pull_request:
+    release:
+      types: [published]
 
 jobs:
   ci:
     name: ci-testing_changes
+    strategy:
+      matrix:
+        target: [latest, v4.0, v3.0, 2.5-ss, 2.5-sc]
+      max-parallel: 1
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
+        if: github.event_name != 'release'
         uses: actions/checkout@v2
+
+      - name: Test Github sources using FirebirdSQL version ${{ matrix.target }}
+        if: github.event_name != 'release'
+        run: |
+          export INPUT_FIREBIRD_DATABASE="my_database.fdb"
+          export INPUT_FIREBIRD_USER="my_user"
+          export INPUT_FIREBIRD_PASSWORD="my_password"
+          export INPUT_VERSION="${{ matrix.target }}"
+          ./entrypoint.sh
+
+      - name: Test Github Action version ${{ github.event.release.tag_name }} using FirebirdSQL version ${{ matrix.target }}
+        if: github.event_name == 'release'
+        uses: juarezr/firebirdsql-github-action@v1.0.0
+        with:
+          version: '${{ matrix.target }}'
+          firebird_database: 'my_database.fdb'
+          firebird_user: 'my_user'
+          firebird_password: 'my_password'
 
       - name: Install FirebirdSQL clients
         run: |
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends firebird3.0-utils libfbclient2
 
-      - name: Setup FirebirdSQL container
-        uses: juarezr/firebirdsql-github-action@v1.0.0
-        with:
-          version: 'latest'
-          firebird_database: 'my_database.fdb'
-          firebird_user: 'my_user'
-          firebird_password: 'my_password'
-
-      - name: Testing Connection and Query
+      - name: Testing Connection and Query to ${{ matrix.target }}
         run: |
-          echo 'select * from rdb$database;' | isql-fb -bail -quiet -z -user my_user -password my_password 'localhost:my_database.fdb'
+          for i in {0..120} ; do nc -z localhost 3050 && echo "Up: ${i} secs" && break; sleep 1; done
+          echo 'select * from rdb$database;' | isql-fb -bail -quiet -z -user my_user -password my_password 'localhost:/firebird/data/my_database.fdb'
 
       - name: Stop Container
         run: |
