--- a/.github/workflows/testing_changes.yml
+++ b/.github/workflows/testing_changes.yml
@@ -17,7 +17,7 @@ on:
         # See https://hub.docker.com/r/jacobalberty/firebird for supported versions
         # and further details on input environment variables
         version:
-          description: 'Version of firebirdsql to use: latest, v4, v4.0, v4.0.2, v3, v3.0, v3.0.10, 2.5-ss, 2.5-sc
+          description: 'Version of firebirdsql to use: latest, v4, v4.0, v4.0.2, v3, v3.0, v3.0.10, 2.5-ss, 2.5-sc'
           required: false
           default: 'latest'
         port:
