--- a/.github/workflows/testing_changes.yml
+++ b/.github/workflows/testing_changes.yml
@@ -16,6 +16,7 @@ on:
       inputs:
         # See https://hub.docker.com/r/jacobalberty/firebird for supported versions
         # and further details on input environment variables
+        # you may only define up to 10 `inputs` for a `workflow_dispatch` event
         version:
           description: 'Version of firebirdsql to use: latest, v4, v4.0, v4.0.2, v3, v3.0, v3.0.10, 2.5-ss, 2.5-sc'
           required: false
@@ -56,10 +57,10 @@ on:
           description: 'Enable datatype compatibility for clients with previews versions: `3.0` and `2.5`.'
           required: false
           default: ''
-        container_name:
-          description: 'The name for tagging the container'
-          required: false
-          default: 'firebirdsql'
+        # container_name:
+        #   description: 'The name for tagging the container'
+        #   required: false
+        #   default: 'firebirdsql'
 
 jobs:
   ci:
