--- a/.github/workflows/testing_changes.yml
+++ b/.github/workflows/testing_changes.yml
@@ -78,8 +78,9 @@ jobs:
     steps:
       - name: Testing FirebirdSQL version ${{ matrix.target }} triggered by ${{ github.event_name }} with SHA ${{ github.event.release.tag_name }}
         if: github.event_name != 'release'
-        uses: juarezr/firebirdsql-github-action@${{ github.sha }}
+        uses: juarezr/firebirdsql-github-action
         with:
+          ref: ${{ github.sha }}
           version: '${{ matrix.target }}'
           firebird_database: 'my_database.fdb'
           firebird_user: 'my_user'
@@ -87,7 +88,7 @@ jobs:
 
       - name: Testing FirebirdSQL version ${{ matrix.target }} triggered by ${{ github.event_name }} with version ${{ github.event.release.tag_name }}
         if: github.event_name == 'release'
-        uses: juarezr/firebirdsql-github-action@${{ github.github.event.release.tag_name }}
+        uses: juarezr/firebirdsql-github-action@main
         with:
           version: '${{ matrix.target }}'
           firebird_database: 'my_database.fdb'
