--- a/.github/workflows/testing_changes.yml
+++ b/.github/workflows/testing_changes.yml
@@ -85,7 +85,7 @@ jobs:
 
       - name: Testing FirebirdSQL version ${{ matrix.target }} triggered by ${{ github.event_name }} with version ${{ github.event.release.tag_name }}
         if: github.event_name == 'release'
-        uses: juarezr/firebirdsql-github-action@v1
+        uses: juarezr/firebirdsql-github-action@main
         with:
           version: '${{ matrix.target }}'
           firebird_database: 'my_database.fdb'
