using master branch for ci testing

--- a/.github/workflows/testing_changes.yml
+++ b/.github/workflows/testing_changes.yml
@@ -74,18 +74,9 @@ jobs:
     runs-on: "${{ matrix.os }}"
 
     steps:
-      - name: Testing FirebirdSQL version ${{ matrix.target }} triggered by ${{ github.event_name }} with SHA ${{ github.event.release.tag_name }}
-        if: github.event_name != 'release'
-        uses: ./
-        with:
-          version: '${{ matrix.target }}'
-          firebird_database: 'my_database.fdb'
-          firebird_user: 'my_user'
-          firebird_password: 'my_password'
-
       - name: Testing FirebirdSQL version ${{ matrix.target }} triggered by ${{ github.event_name }} with version ${{ github.event.release.tag_name }}
         if: github.event_name == 'release'
-        uses: juarezr/firebirdsql-github-action@main
+        uses: juarezr/firebirdsql-github-action@master
         with:
           version: '${{ matrix.target }}'
           firebird_database: 'my_database.fdb'
