running ci on push pr and releases

--- a/.github/workflows/testing_changes.yml
+++ b/.github/workflows/testing_changes.yml
@@ -74,7 +74,17 @@ jobs:
     runs-on: "${{ matrix.os }}"
 
     steps:
-      - name: Testing FirebirdSQL version ${{ matrix.target }} triggered by ${{ github.event_name }} with version ${{ github.event.release.tag_name }}
+      - name: Testing changes with FirebirdSQL version ${{ matrix.target }} triggered by ${{ github.event_name }} at '${{ github.sha }}'
+        if: github.event_name != 'release'
+        uses: ./ # Uses an action in the root directory
+        with:
+          version: '${{ matrix.target }}'
+          firebird_database: 'my_database.fdb'
+          firebird_user: 'my_user'
+          firebird_password: 'my_password'
+
+      - name: Testing release with FirebirdSQL version ${{ matrix.target }} triggered by version '${{ github.event.release.tag_name }}'
+        if: github.event_name == 'release'
         uses: juarezr/firebirdsql-github-action@master
         with:
           version: '${{ matrix.target }}'
