--- a/.github/workflows/testing_changes.yml
+++ b/.github/workflows/testing_changes.yml
@@ -4,12 +4,10 @@ name: testing_changes
 
 on: 
     push:
-      branches-ignore:
-        - 'main'
-        - 'master'
-        - 'draft/*'
+      branches: [ "master" ]
     pull_request:
-      types: [opened, reopened, synchronize]
+      branches: [ "master" ]
+      types: [opened, reopened, synchronize, ready_for_review]
     release:
       types: [created, edited]
     workflow_dispatch:
